apps/grocy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  labels:
    app: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grocy
  template:
    metadata:
      labels:
        app: grocy
    spec:
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy@sha256:71226f43e18b15836833075c15c9d5d51d81a2a4fc38d56bb1dc05f34970cc80
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grocy-data
