apps/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
spec:
  selector:
    app: grocy
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: http
